...
  return function PlayStackScreen() {
    return (
      <PlayStack.Navigator screenOptions={screenOptions}>
        <PlayStack.Screen name="Modes" component={ModesScreenWrapper} />
        <PlayStack.Screen name="Game" component={GameScreenWrapper} />
        <PlayStack.Screen name="Event" component={EventScreenWrapper} />
        <PlayStack.Screen name="Leaderboard" component={LeaderboardScreen} />
      </PlayStack.Navigator>
    );
  };
}

export function CollectionsStackScreen() {
...
          fontSize: 10,
          letterSpacing: 0.6,
        },
      }}
    >
      <Tab.Screen
        name="Home"
        component={HomeStackScreen}
        options={{
          tabBarIcon: ({ focused }: { focused: boolean }) => <TabIcon iconName={focused ? 'home' : 'home-outline'} focused={focused} />,
        }}
      />
      <Tab.Screen
...
